# src/validation/onlineSalesJoi.js
@@ -6,14 +6,17 @@ const onlineSaleValidationSchema = Joi.object({
       Joi.object({
         productId: Joi.string().required(),
         quantity: Joi.number().min(1).required(),
-        salePrice: Joi.number().optional(), // 🔹 Ціна за одиницю неважлива
+        salePrice: Joi.number().required(),
       })
     )
-    .optional(), // 🔹 Масив продуктів неважливий
-  totalAmount: Joi.number().optional(), // 🔹 Загальна сума неважлива
-  paymentMethod: Joi.string().valid("card", "bank_transfer").optional(), // 🔹 Метод оплати неважливий
-  processedBy: Joi.string().optional(), // 🔹 Адміністратор неважливий
-  notes: Joi.string().optional(), // 🔹 Примітки неважливі
+    .required(),
+  totalAmount: Joi.number().required(),
+  paymentMethod: Joi.string().valid("card", "bank_transfer").required(),
+  processedBy: Joi.string().optional(),
+  status: Joi.string()
+    .valid("new", "completed", "cancelled", "returned")
+    .required(),
+  notes: Joi.string().optional(),
 });
 
 module.exports = onlineSaleValidationSchema;
